--- a/24ss/07_effectsize/_slides/index.html
+++ b/24ss/07_effectsize/_slides/index.html
@@ -633,7 +633,7 @@ X_\text{pooled} = [X'_A; X'_B]
 \]</span></p>
 </div>
 <ul>
-<li class="fragment"><span class="math inline">\(\hat{\sigma}_\text{av}^2\)</span> wird auch als <strong>ungepoolte Varianz</strong> bezeicnet, weil hier nicht alle Datenpunkte in einen Pool geworfen werden, sondern die Varianzen <span class="math inline">\(\hat{\sigma}_A^2\)</span> und <span class="math inline">\(\hat{\sigma}_B^2\)</span> einzeln berechnet und anschließend ohne Berücksichtigung unterschiedlicher Stichprobengrößen gemittelt werden.</li>
+<li class="fragment"><span class="math inline">\(\hat{\sigma}_\text{av}^2\)</span> wird auch als <strong>ungepoolte Varianz</strong> bezeichnet, weil hier nicht alle Datenpunkte in einen Pool geworfen werden, sondern die Varianzen <span class="math inline">\(\hat{\sigma}_A^2\)</span> und <span class="math inline">\(\hat{\sigma}_B^2\)</span> einzeln berechnet und anschließend ohne Berücksichtigung unterschiedlicher Stichprobengrößen gemittelt werden.</li>
 </ul>
 <!----------------->
 <!--- New slide --->
