--- a/24ss/07_effectsize/_slides/index.html
+++ b/24ss/07_effectsize/_slides/index.html
@@ -827,7 +827,7 @@ plt.savefig('images/pooled_variance_dependent.png', bbox_inches='tight')
 <p><strong>Variante b): gepoolte Varianz</strong></p>
 <ul>
 <li class="fragment"><strong>Problem:</strong> häufig sollen Effektstärken zwischen Designs mit <em>abhängigen</em> und <em>unabhängigen</em> Messungen verglichen werden — jedoch lässt sich in Fall 2 (unabhängige Messungen) keine Differenzenvarianz berechnen.</li>
-<li class="fragment">Aus diesem Grund gibt es eine zweite gängige Variante einer Standardisierungsvarianz für Cohen’s d bei abhängigen Messungen, die identisch mit der Varianz in Fall 2 ist: die gepoolte Varianz</li>
+<li class="fragment">Aus diesem Grund gibt es eine zweite gängige von Cohen’s d bei abhängigen Messungen, die auf der <strong>gepoolten Varianz</strong> basiert (analog zu Fall 2):</li>
 </ul>
 <div style="margin-top: -12px">
 <p><span class="math display">\[
