--- a/24ss/07_effectsize/_slides/index.html
+++ b/24ss/07_effectsize/_slides/index.html
@@ -550,7 +550,7 @@ d = \frac{\text{Mittelwertdifferenz}}{\text{Standardabweichung}}
 <h2>Fall 2: zwei Stichproben + unabhängige Messungen</h2>
 <div class="columns">
 <div class="column" style="width:68%;">
-<p><strong>Es wird die Mittelwertdifferenz <span class="math inline">\(\bar{x}_A - \bar{x}_B\)</span> zweier unabhängiger Gruppen berechnett.</strong></p>
+<p><strong>Es wird die Mittelwertdifferenz <span class="math inline">\(\bar{x}_A - \bar{x}_B\)</span> zweier unabhängiger Gruppen berechnet und die Frage ist, ob diese Differenz bedeutsam ist.</strong></p>
 <div class="vspace-small">
 
 </div>
@@ -686,7 +686,7 @@ X_\text{pooled} = [X'_A; X'_B]
 <h2>Fall 3: eine Stichprobe + zwei abhängige Messungen</h2>
 <div class="columns">
 <div class="column" style="width:68%;">
-<p><strong><span class="math inline">\(A\)</span> und <span class="math inline">\(B\)</span> sind abhängige Messungen in derselben Gruppe (d.h. <span class="math inline">\(A\)</span> und <span class="math inline">\(B\)</span> sind zwei Versuchszeitpunkte bzw. -bedingungen).</strong></p>
+<p><strong>Es wird die Mittelwertdifferenz <span class="math inline">\(\bar{x}_A - \bar{x}_B\)</span> zweier abhängiger Messungen in einer Stichprobe berechnet und die Frage ist, ob diese Differenz bedeutsam ist.</strong></p>
 <div class="vspace-small">
 
 </div>
